estilo.css
@import "fonts/ravie.css";
@import "fonts/verdana.css";

/* EXERCÍCIO 1: fontes */
/* importá-las aqui... e definir as `font-family` da turminha... */

h1 {
  font-family: "Ravie", sans-serif;
}

body {
  background-color: #fff;
  font-family: "Verdana", sans-serif;
}

strong {
  color: #d027aa;
}

#recipiente {
  background-image: linear-gradient(to bottom, #f6f1b2, #4599b2 80%);
  border-left: 1px solid #d3d3d3;
  border-right: 1px solid #d3d3d3;
}

#cardapio {
  background-color: rgba(255, 255, 255, 0.2);
  border-top: 1px solid #aac0ae;
  border-bottom: 1px solid #aac0ae;
  border-left: 1px solid #aac0ae;
}

#cardapio h3 {
  font-size: 18px;
  color: #333;
  margin-top: 30px;
}

#cardapio article {
  font-size: 14px;
  color: #333;
}

/* EXERCÍCIO 2: layout da página */
#recipiente {
  /* layout da página aqui */
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-columns: 154px 646px;
  min-height: 100vh;  
}

body{
  margin: 0px;
}

#cabecalho-pagina {
  grid-column: 2 / 3;
}

#lateral {
  grid-column: 1 / 2;
  grid-row: 1 / 4;
}

#cardapio {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  padding: 0 20px;
}

#rodape-pagina {
  grid-row: 3 / 4;
  grid-column: 2 / 3;
}

/* EXERCÍCIO 3: cabeçalho da página */
#cabecalho-pagina {
  padding: 10px;
}

#cabecalho-pagina h1 {
  margin: 0;
  font-size: 36px;
  color: #e90c0c;
  font-weight: normal;
  text-align: center;
}

#cabecalho-pagina h2 {
  margin: 0;
  font-size: 24px;
  color: #333;
  font-weight: normal;
  text-align: right;
}

/* EXERCÍCIO 4: cada item do menu */
article {
  display: flex;
  justify-content: space-between;
  line-height: 2em;
}

/* EXERCÍCIO 5: o rodapé */
#rodape-pagina {
  display: flex;
  justify-content: flex-end;
  margin: 46px 15px 25px 0;
}

/* EXERCÍCIO 6: lateral */
#lateral {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-top: 17px;
}

/* EXERCÍCIO 7: o ticket */
#ticket {
}

#ticket:hover {
}

/* EXERCÍCIO 8: deslocamento no siri e peixe */
#siri {
}

#peixe {
}

/* EXERCÍCIO 9: bolhas - no HTML e no JS */
/* --- */

/* EXERCÍCIO 10: modo escuro */
/* no início deste arquivo (depois dos @import), coloque
   as custom properties */
/* coloque aqui a media query para sobrescrever o valor
   das custom properties para o modo escuro */

